--- a/friends.html
+++ b/friends.html
@@ -66,8 +66,8 @@
         <ul class="nav__list">
             <li class="nav__btn"><a class="nav__link" href="friends.html"><i class="fas fa-user fa-2x"></i></a></li>
             <li class="nav__btn"><a class="nav__link" href="chats.html"><span class="nav__notification">1</span><i class="far fa-comment fa-2x"></i></a></li>
-            <li class="nav__btn"><a class="nav__link" href="#"><i class="fas fa-search fa-2x"></i></a></li>
-            <li class="nav__btn"><a class="nav__link" href="#"><span class="nav__notification"></span><i class="fas fa-ellipsis-h fa-2x"></i></a></li>
+            <li class="nav__btn"><a class="nav__link" href="find.html"><i class="fas fa-search fa-2x"></i></a></li>
+            <li class="nav__btn"><a class="nav__link" href="more.html"><span class="nav__notification"></span><i class="fas fa-ellipsis-h fa-2x"></i></a></li>
         </ul>
     </nav>
 </body>
