--- a/find.html
+++ b/find.html
@@ -31,10 +31,10 @@
       <h1 class="screen-header__title">Find</h1>
       <div class="screen-header__icons">
         <span><i class="fas fa-search fa-lg"></i></span>
-        <span
-          ><span class="screen-header__point"></span
-          ><i class="fas fa-cog fa-lg"></i
-        ></span>
+        <span>
+          <span class="screen-header__point"></span>
+          <i class="fas fa-cog fa-lg"></i>
+        </span>
       </div>
     </header>
     <main class="main-screen">
@@ -47,6 +47,36 @@
         </div>
         <div class="find-icons__icon"><i class="fas fa-fingerprint"></i><span>Add by ID</span></div>
         <div class="find-icons__icon"><i class="far fa-envelope"></i><span>Invite</span></div>
+      </div>
+      <div class="recommended-friends">
+        <h6 class="recommended-friends__title">Recommended Friends</h6>
+        <span>You have no recommended friends.</span>
+      </div>
+      <div class="open-chat">
+        <div class="open-chat__header">
+          <h4>Open Chat</h4>
+          <span>Go to Openchat Home <i class="fas fa-chevron-right fa-xs"></i></span>
+        </div>
+        <div class="open-post">
+          <div class="open-post__column">
+            <h5 class="open-post__title">#BTS</h5>
+            <h6 class="open-post__hashtags">#bts#army#friends</h6>
+            <div class="open-post__members">
+              <img src="">
+              <span class="open-post__member-count">802 members</span>
+              <div class="divider"></div>
+              <span class="open-post__member-status">Active</span>
+            </div>
+          </div>
+          <div class="open-post__column">
+            <div class="open-post__photo">
+              <img src="">
+              <div class="open-post__heart-count">
+                <i class="fas fa-heart fa-xs"></i><span>326</span>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </main>
     <nav class="nav">
