--- a/find.html
+++ b/find.html
@@ -33,20 +33,20 @@
         <span><i class="fas fa-search fa-lg"></i></span>
         <span>
           <span class="screen-header__point"></span>
-          <i class="fas fa-cog fa-lg"></i>
+          <a href="settings.html"><i class="fas fa-cog fa-lg"></i></a>
         </span>
       </div>
     </header>
     <main class="main-screen">
-      <div class="find-icons">
-        <div class="find-icons__icon">
+      <div class="icon-row">
+        <div class="icon-row__icon">
           <i class="fas fa-qrcode"></i><span>QR Code</span>
         </div>
-        <div class="find-icons__icon">
+        <div class="icon-row__icon">
           <i class="far fa-address-book"></i><span>Add by Contacts</span>
         </div>
-        <div class="find-icons__icon"><i class="fas fa-fingerprint"></i><span>Add by ID</span></div>
-        <div class="find-icons__icon"><i class="far fa-envelope"></i><span>Invite</span></div>
+        <div class="icon-row__icon"><i class="fas fa-fingerprint"></i><span>Add by ID</span></div>
+        <div class="icon-row__icon"><i class="far fa-envelope"></i><span>Invite</span></div>
       </div>
       <div class="recommended-friends">
         <h6 class="recommended-friends__title">Recommended Friends</h6>
