--- a/chats.html
+++ b/chats.html
@@ -30,23 +30,25 @@
             <span><i class="fas fa-search fa-lg"></i></span>
             <span><i class="fas fa-comment-medical fa-lg"></i></span>
             <span><i class="fas fa-music fa-lg"></i></span>
-            <span><i class="fas fa-cog fa-lg"></i></span>
+            <a href="settings.html"><i class="fas fa-cog fa-lg"></i></a>
         </div>
     </header>
     <main class="main-screen">
-        <div class="user-component">
-            <div class="user-component__column">
-                <img src="https://lh3.googleusercontent.com/proxy/MefG-u9oPu00Hq73e-NayzZx-GtVZ0C4r2sOVXhW6kSgnz6494t631bRYDznphnix_bo1Fsw3S48y-VC8hEWPVsEQimyemk548dKxU-4HGOmNO1tSSlRRFyfZO0" class="user-component__avatar">
-                <div class="user-component__text">
-                    <h4 class="user-component__title">KokoaTalk</h4>
-                    <h6 class="user-component__subtitle">Please check My Kokoa Account Info</h6>
+        <a href="chat.html">
+            <div class="user-component">
+                <div class="user-component__column">
+                    <img src="https://lh3.googleusercontent.com/proxy/MefG-u9oPu00Hq73e-NayzZx-GtVZ0C4r2sOVXhW6kSgnz6494t631bRYDznphnix_bo1Fsw3S48y-VC8hEWPVsEQimyemk548dKxU-4HGOmNO1tSSlRRFyfZO0" class="user-component__avatar">
+                    <div class="user-component__text">
+                        <h4 class="user-component__title">KokoaTalk</h4>
+                        <h6 class="user-component__subtitle">Please check My Kokoa Account Info</h6>
+                    </div>
+                </div>
+                <div class="user-component__column">
+                    <span class="user-component__time">21:22</span>
+                    <div class="badge">1</div>
                 </div>
             </div>
-            <div class="user-component__column">
-                <span class="user-component__time">21:22</span>
-                <div class="badge">1</div>
-            </div>
-        </div>
+        </a>
     </main>
     <nav class="nav">
         <ul class="nav__list">
