Add animation& Set size

--- a/chat.html
+++ b/chat.html
@@ -68,4 +68,7 @@
                 <i class="far fa-paper-plane"></i>
             </button>
         </div>
+        <div class="no-mobile">
+            <span>Your Screen is TOO BIG to see</span>
+        </div>
     </form>
