--- a/find.html
+++ b/find.html
@@ -105,5 +105,8 @@
         </li>
       </ul>
     </nav>
+    <div class="no-mobile">
+      <span>Your Screen is TOO BIG to see</span>
+  </div>
   </body>
 </html>
