--- a/more.html
+++ b/more.html
@@ -86,5 +86,8 @@
             <li class="nav__btn"><a class="nav__link" href="more.html"><span class="nav__notification"></span><i class="fas fa-ellipsis-h fa-2x"></i></a></li>
         </ul>
     </nav>
+    <div class="no-mobile">
+        <span>Your Screen is TOO BIG to see</span>
+    </div>
 </body>
 </html>
