--- a/friends.html
+++ b/friends.html
@@ -72,5 +72,11 @@
             <li class="nav__btn"><a class="nav__link" href="more.html"><span class="nav__notification"></span><i class="fas fa-ellipsis-h fa-2x"></i></a></li>
         </ul>
     </nav>
+    <div id="splash-screen">
+        <i class="fas fa-comment"></i>
+    </div>
+    <div class="no-mobile">
+        <span>Your Screen is TOO BIG to see</span>
+    </div>
 </body>
 </html>
