--- a/index.html
+++ b/index.html
@@ -34,5 +34,8 @@
         <input type="submit" value="Log In">
         <a href="#" >Find Kokoa Account or Password</a>
     </form>
+    <div class="no-mobile">
+        <span>Your Screen is TOO BIG to see</span>
+    </div>
 </body>
 </html>
