--- a/more.html
+++ b/more.html
@@ -87,7 +87,7 @@
         </ul>
     </nav>
     <div class="no-mobile">
-        <span>Your Screen is TOO BIG to see</span>
+        <span>Your Screen is SUPER BIG to see</span>
     </div>
 </body>
 </html>
